--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "formik": "^2.2.9",
+    "markdown-it": "^13.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.3",
+    "react-markdown": "^8.0.5",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "yup": "^1.0.0"
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -25,7 +32,10 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "clsx": "^1.2.1",
+    "dotenv": "^16.0.3",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
